# shine

./: .env.example  .gitignore  README.md  shine.abi  shine.cpp  shine.hpp  shine_bot.rb  table.hpp
contract/: .clang-format  .envrc.example  .gitignore  CMakeLists.txt  Makefile  README.md  asset.hpp  build.sh  shine.abi  shine.cpp  shine.hpp  shine.wasm  shine_bot.rb  table.hpp  test.sh
contract/abi/: shine.abi
contract/include/: asset.hpp  shine.hpp
contract/src/: shine.cpp
contract/tests/: boot_seq.yaml  config.ini  eosc-vault.json  eosio.token.abi
shine/: go.mod  go.sum  main.go
shine-go/: README.md  actions.go  shine.go
shine-go/cmd/setcode/: main.go  shine.wasm
shine-go/cmd/shine/: main.go  main_test.go
shine/cmd/: post.go  register.go  root.go  vote.go
